@@ -1065,7 +1065,7 @@ jsp.tools.general.view =View
 jsp.tools.confirm-delete-collection.title = Delete Collection
 jsp.tools.confirm-delete-collection.heading = Delete Collection: {0}
 jsp.tools.confirm-delete-collection.confirm = Are you sure the collection <strong>{0}</strong> should be deleted?  This will delete:
-jsp.tools.confirm-delete-collection.info1 = Any items and incomplete submissions in this collections that aren't contained in other collections
+jsp.tools.confirm-delete-collection.info1 = Any items and incomplete submissions in this collection that aren't contained in other collections
 jsp.tools.confirm-delete-collection.info2 = The contents of those items
 jsp.tools.confirm-delete-collection.info3 = All associated authorisation policies
 
